implementing SiteMap utility class

--- a/pyscript-lab/public/e/bokeh/1.html
+++ b/pyscript-lab/public/e/bokeh/1.html
@@ -20,14 +20,15 @@
     </py-env>
     <meta http-equiv="content-security-policy" content=""><script type="text/javascript" data-svelte="svelte-35t31t">Bokeh.set_log_level("info");
   </script><py-env data-svelte="svelte-35t31t">- bokeh </py-env>
-	<link rel="stylesheet" href="/python-ds/svelte/immutable/assets/pages/__layout.svelte-643e884e.css">
-	<link rel="modulepreload" href="/python-ds/svelte/immutable/start-8b5dc075.js">
-	<link rel="modulepreload" href="/python-ds/svelte/immutable/chunks/index-c88c2b4a.js">
+	<link rel="stylesheet" href="/python-ds/svelte/immutable/assets/pages/__layout.svelte-3e474b7b.css">
+	<link rel="modulepreload" href="/python-ds/svelte/immutable/start-f872db4e.js">
+	<link rel="modulepreload" href="/python-ds/svelte/immutable/chunks/index-ee947acd.js">
+	<link rel="modulepreload" href="/python-ds/svelte/immutable/chunks/index-9f11fb9d.js">
 	<link rel="modulepreload" href="/python-ds/svelte/immutable/chunks/singletons-d1fb5791.js">
-	<link rel="modulepreload" href="/python-ds/svelte/immutable/pages/__layout.svelte-9ab2819b.js">
+	<link rel="modulepreload" href="/python-ds/svelte/immutable/pages/__layout.svelte-8eaed9b2.js">
 	<link rel="modulepreload" href="/python-ds/svelte/immutable/chunks/utils-4fc137b3.js">
-	<link rel="modulepreload" href="/python-ds/svelte/immutable/pages/e/bokeh/1.svelte-26a09661.js">
-	<link rel="modulepreload" href="/python-ds/svelte/immutable/chunks/experiment_card-2702d48c.js">
+	<link rel="modulepreload" href="/python-ds/svelte/immutable/pages/e/bokeh/1.svelte-75ac7a78.js">
+	<link rel="modulepreload" href="/python-ds/svelte/immutable/chunks/experiment_card-7f393778.js">
   </head>
   <body class="flex flex-col h-screen">
     <div class="w-full flex-grow">
@@ -52,9 +53,21 @@
       <div class="md:hidden flex items-center"><button class="mobile-menu-button"><svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg></button></div></div></div>
 
   
-  <div class="mobile-menu hidden md:hidden"><a href="/python-ds/e/repl" class="py-5 px-3 text-sky-500 hover:text-yellow-500">R.E.P.L</a>
-    <a href="/python-ds/e/interop" class="py-5 px-3 text-sky-500 hover:text-yellow-500">Interoperability</a>
-    <a href="/python-ds/e/bokeh" class="py-5 px-3 text-sky-500 hover:text-yellow-500">Bokeh</a></div></nav>
+  <nav id="mobile-navigation" class="opacity-0 invisible transition-all duration-500 fixed top-0 right-0 bottom-0 left-0 backdrop-blur-sm z-10">
+    <ul class="translate-x-full absolute top-0 right-0 bottom-0 w-9/12 py-4 bg-white drop-shadow-2xl z-10 transition-all duration-500">
+
+<div></div>
+
+<div></div>
+
+<div></div>
+
+<div></div>
+
+<div></div></ul>
+
+    
+    <button class="absolute top-0 right-0 bottom-0 left-0 opacity-0"><svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 absolute top-2 left-2" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg></button></nav></nav>
   <main class="w-full h-[calc(100%-120px)]"><div class="py-10 w-full flex items-center justify-center h-full"><div class="bg-white rounded-lg shadow-2xl overflow-hidden w-10/12 ">
       <div class="md:flex"><section class="bg-slate-300 lg:w-3/4 md:flex-grow md:w-full min-h-[380px]"><div slot="py_slot" id="chart" class="flex items-center justify-center h-full"><img width="200" height="200" src="https://i.gifer.com/origin/a7/a742fbe8ed45f6455cc767ab4c41997e_w200.gif" alt="Under Construction"></div></section>
         <section class="p-4 space-y-3 md:w-1/2 lg:w-4/12 border-t border-slate-900 md:border-l"><article slot="content_slot" class="mb-10"><h2 class="text-xl font-extrabold mb-5">Bokeh + Pandas</h2>
@@ -68,10 +81,10 @@
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="1cymd3y">
-		import { start } from "/python-ds/svelte/immutable/start-8b5dc075.js";
+		<script type="module" data-sveltekit-hydrate="1pkg1bp">
+		import { start } from "/python-ds/svelte/immutable/start-f872db4e.js";
 		start({
-			target: document.querySelector('[data-sveltekit-hydrate="1cymd3y"]').parentNode,
+			target: document.querySelector('[data-sveltekit-hydrate="1pkg1bp"]').parentNode,
 			paths: {"base":"/python-ds","assets":"/python-ds"},
 			session: {},
 			route: true,
