--- a/pyscript-lab/public/index.html
+++ b/pyscript-lab/public/index.html
@@ -19,13 +19,14 @@
 - bokeh
     </py-env>
     <meta http-equiv="content-security-policy" content="">
-	<link rel="stylesheet" href="/python-ds/svelte/immutable/assets/pages/__layout.svelte-643e884e.css">
-	<link rel="modulepreload" href="/python-ds/svelte/immutable/start-8b5dc075.js">
-	<link rel="modulepreload" href="/python-ds/svelte/immutable/chunks/index-c88c2b4a.js">
+	<link rel="stylesheet" href="/python-ds/svelte/immutable/assets/pages/__layout.svelte-3e474b7b.css">
+	<link rel="modulepreload" href="/python-ds/svelte/immutable/start-f872db4e.js">
+	<link rel="modulepreload" href="/python-ds/svelte/immutable/chunks/index-ee947acd.js">
+	<link rel="modulepreload" href="/python-ds/svelte/immutable/chunks/index-9f11fb9d.js">
 	<link rel="modulepreload" href="/python-ds/svelte/immutable/chunks/singletons-d1fb5791.js">
-	<link rel="modulepreload" href="/python-ds/svelte/immutable/pages/__layout.svelte-9ab2819b.js">
+	<link rel="modulepreload" href="/python-ds/svelte/immutable/pages/__layout.svelte-8eaed9b2.js">
 	<link rel="modulepreload" href="/python-ds/svelte/immutable/chunks/utils-4fc137b3.js">
-	<link rel="modulepreload" href="/python-ds/svelte/immutable/pages/index.svelte-fe38c5f8.js">
+	<link rel="modulepreload" href="/python-ds/svelte/immutable/pages/index.svelte-f44333db.js">
   </head>
   <body class="flex flex-col h-screen">
     <div class="w-full flex-grow">
@@ -50,9 +51,21 @@
       <div class="md:hidden flex items-center"><button class="mobile-menu-button"><svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg></button></div></div></div>
 
   
-  <div class="mobile-menu hidden md:hidden"><a href="/python-ds/e/repl" class="py-5 px-3 text-sky-500 hover:text-yellow-500">R.E.P.L</a>
-    <a href="/python-ds/e/interop" class="py-5 px-3 text-sky-500 hover:text-yellow-500">Interoperability</a>
-    <a href="/python-ds/e/bokeh" class="py-5 px-3 text-sky-500 hover:text-yellow-500">Bokeh</a></div></nav>
+  <nav id="mobile-navigation" class="opacity-0 invisible transition-all duration-500 fixed top-0 right-0 bottom-0 left-0 backdrop-blur-sm z-10">
+    <ul class="translate-x-full absolute top-0 right-0 bottom-0 w-9/12 py-4 bg-white drop-shadow-2xl z-10 transition-all duration-500">
+
+<div></div>
+
+<div></div>
+
+<div></div>
+
+<div></div>
+
+<div></div></ul>
+
+    
+    <button class="absolute top-0 right-0 bottom-0 left-0 opacity-0"><svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 absolute top-2 left-2" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg></button></nav></nav>
   <main class="w-full"><div class="py-10 flex items-center justify-center"><div class="bg-white rounded-lg shadow-2xl overflow-hidden w-3/4 ">
       <div class="md:flex"><img class="w-full md:w-2/3 object-cover object-center p-1 rounded-lg" src="/python-ds/images/pyscript.png" alt="PyScript">
         <div class="p-8 space-y-3 border-slate-900 md:border-l sm:border-t"><h2 class="text-xl font-extrabold mb-5">Hi there</h2>
@@ -67,10 +80,10 @@
       <footer class="py-3 px-6 bg-slate-800 text-xs text-white"><div id=""></div></footer></div></div></main></div>
 
 
-		<script type="module" data-sveltekit-hydrate="101crot">
-		import { start } from "/python-ds/svelte/immutable/start-8b5dc075.js";
+		<script type="module" data-sveltekit-hydrate="t2yrnq">
+		import { start } from "/python-ds/svelte/immutable/start-f872db4e.js";
 		start({
-			target: document.querySelector('[data-sveltekit-hydrate="101crot"]').parentNode,
+			target: document.querySelector('[data-sveltekit-hydrate="t2yrnq"]').parentNode,
 			paths: {"base":"/python-ds","assets":"/python-ds"},
 			session: {},
 			route: true,
