--- a/pyscript-lab/public/e/repl.html
+++ b/pyscript-lab/public/e/repl.html
@@ -19,15 +19,15 @@
 - bokeh
     </py-env>
     <meta http-equiv="content-security-policy" content="">
-	<link rel="stylesheet" href="/python-ds/svelte/immutable/assets/pages/__layout.svelte-3e474b7b.css">
-	<link rel="modulepreload" href="/python-ds/svelte/immutable/start-f872db4e.js">
-	<link rel="modulepreload" href="/python-ds/svelte/immutable/chunks/index-ee947acd.js">
-	<link rel="modulepreload" href="/python-ds/svelte/immutable/chunks/index-9f11fb9d.js">
+	<link rel="stylesheet" href="/python-ds/svelte/immutable/assets/pages/__layout.svelte-90b75c33.css">
+	<link rel="modulepreload" href="/python-ds/svelte/immutable/start-5dd0dd8c.js">
+	<link rel="modulepreload" href="/python-ds/svelte/immutable/chunks/index-5eb3cc7f.js">
+	<link rel="modulepreload" href="/python-ds/svelte/immutable/chunks/index-5e479832.js">
 	<link rel="modulepreload" href="/python-ds/svelte/immutable/chunks/singletons-d1fb5791.js">
-	<link rel="modulepreload" href="/python-ds/svelte/immutable/pages/__layout.svelte-8eaed9b2.js">
+	<link rel="modulepreload" href="/python-ds/svelte/immutable/pages/__layout.svelte-6edc12e6.js">
 	<link rel="modulepreload" href="/python-ds/svelte/immutable/chunks/utils-4fc137b3.js">
-	<link rel="modulepreload" href="/python-ds/svelte/immutable/pages/e/repl.svelte-f716bd5d.js">
-	<link rel="modulepreload" href="/python-ds/svelte/immutable/chunks/experiment_card-7f393778.js">
+	<link rel="modulepreload" href="/python-ds/svelte/immutable/pages/e/repl.svelte-38a5bc37.js">
+	<link rel="modulepreload" href="/python-ds/svelte/immutable/chunks/experiment_card-befa17fa.js">
   </head>
   <body class="flex flex-col h-screen">
     <div class="w-full flex-grow">
@@ -38,9 +38,16 @@
             <span class="font-bold">PyScript L.A.B</span></a></div>
 
         
-        <div class="hidden md:flex items-center space-x-1"><a href="/python-ds/e/repl" class="py-5 px-3 text-sky-500 hover:text-yellow-500">R.E.P.L</a>
-          <a href="/python-ds/e/interop" class="py-5 px-3 text-sky-500 hover:text-yellow-500">Interoperability</a>
-          <a href="/python-ds/e/bokeh" class="py-5 px-3 text-sky-500 hover:text-yellow-500">Bokeh</a></div></div>
+        <div class="hidden md:flex items-center space-x-1">
+
+
+<div></div>
+
+
+<div></div>
+
+
+<div></div></div></div>
 
       
       <div class="hidden md:flex items-center space-x-1"><a href="https://linkedin.com/in/guinetik" class="py-2 px-3 bg-blue-400 hover:bg-blue-300 text-blue-900 hover:text-blue-800 rounded transition duration-300"><img class="inline w-6 h-6" src="/python-ds/images/linkedin.svg" alt="Linkedin"> Linkedin
@@ -55,13 +62,18 @@
   <nav id="mobile-navigation" class="opacity-0 invisible transition-all duration-500 fixed top-0 right-0 bottom-0 left-0 backdrop-blur-sm z-10">
     <ul class="translate-x-full absolute top-0 right-0 bottom-0 w-9/12 py-4 bg-white drop-shadow-2xl z-10 transition-all duration-500">
 
-<div></div>
 
 <div></div>
 
-<div></div>
 
 <div></div>
+
+
+<div></div>
+
+
+<div></div>
+
 
 <div></div></ul>
 
@@ -82,10 +94,10 @@
       <footer class="py-3 px-6 bg-slate-800 text-xs text-white font-mono"><div id="script_gutter"></div></footer></div></div></main></div>
 
 
-		<script type="module" data-sveltekit-hydrate="1t9k9gb">
-		import { start } from "/python-ds/svelte/immutable/start-f872db4e.js";
+		<script type="module" data-sveltekit-hydrate="gmqrpp">
+		import { start } from "/python-ds/svelte/immutable/start-5dd0dd8c.js";
 		start({
-			target: document.querySelector('[data-sveltekit-hydrate="1t9k9gb"]').parentNode,
+			target: document.querySelector('[data-sveltekit-hydrate="gmqrpp"]').parentNode,
 			paths: {"base":"/python-ds","assets":"/python-ds"},
 			session: {},
 			route: true,
