--- a/pyscript-lab/public/e/bokeh.html
+++ b/pyscript-lab/public/e/bokeh.html
@@ -33,14 +33,14 @@
     <py-env> - bokeh </py-env>
     <meta http-equiv="content-security-policy" content=""><script type="text/javascript" data-svelte="svelte-35t31t">Bokeh.set_log_level("info");
   </script><py-env data-svelte="svelte-35t31t">- bokeh </py-env>
-	<link rel="stylesheet" href="/python-ds/svelte/immutable/assets/pages/__layout.svelte-984fadee.css">
-	<link rel="modulepreload" href="/python-ds/svelte/immutable/start-3a6ab04b.js">
+	<link rel="stylesheet" href="/python-ds/svelte/immutable/assets/pages/__layout.svelte-29145ecc.css">
+	<link rel="modulepreload" href="/python-ds/svelte/immutable/start-e29d7654.js">
 	<link rel="modulepreload" href="/python-ds/svelte/immutable/chunks/index-5eb3cc7f.js">
 	<link rel="modulepreload" href="/python-ds/svelte/immutable/chunks/index-5e479832.js">
 	<link rel="modulepreload" href="/python-ds/svelte/immutable/chunks/singletons-d1fb5791.js">
-	<link rel="modulepreload" href="/python-ds/svelte/immutable/pages/__layout.svelte-539ff4bd.js">
+	<link rel="modulepreload" href="/python-ds/svelte/immutable/pages/__layout.svelte-5553ecfa.js">
 	<link rel="modulepreload" href="/python-ds/svelte/immutable/chunks/utils-4fc137b3.js">
-	<link rel="modulepreload" href="/python-ds/svelte/immutable/pages/e/bokeh/index.svelte-1a265984.js">
+	<link rel="modulepreload" href="/python-ds/svelte/immutable/pages/e/bokeh/index.svelte-5fbac7ce.js">
 	<link rel="modulepreload" href="/python-ds/svelte/immutable/chunks/experiment_card-befa17fa.js">
 	<link rel="modulepreload" href="/python-ds/svelte/immutable/chunks/RunPython-86cc62fa.js">
   </head>
@@ -97,7 +97,7 @@
       <div class="md:flex"><section class="bg-slate-300 lg:w-3/4 md:flex-grow md:w-full min-h-[380px]"><div slot="py_slot" id="chart" class="flex items-center justify-center h-full"></div></section>
         <section class="p-4 space-y-3 md:w-1/2 lg:w-4/12 border-t border-slate-900 md:border-l"><article slot="content_slot" class="mb-10"><h2 class="text-xl font-extrabold mb-5">Bokeh</h2>
     <p>Default example from PyScript Docs.</p>
-    <p class="mt-6"><a class="text-sky-500" href="/python-ds/py/bokeh_index.py" target="_blank">View source</a></p></article>
+    <p class="mt-6"><a class="text-sky-500" href="https://github.com/guinetik/python-ds/blob/master/pyscript-lab/static/py/bokeh_index.py" target="_blank">View source</a></p></article>
           <div class="flex"><a href="/python-ds/e/interop/" class="text-xs ml-0 py-2 px-3 bg-blue-400 hover:bg-slate-300 text-slate-900 hover:text-slate-800 rounded transition duration-300"><img class="inline h-4" src="/python-ds/images/arrow-left.svg" alt="Next">Previous
             </a>
             <a href="/python-ds/e/bokeh/1" class="text-xs ml-auto py-2 px-3 bg-yellow-400 hover:bg-slate-300 text-slate-900 hover:text-slate-800 rounded transition duration-300">Next<img class="inline h-4" src="/python-ds/images/arrow-next.svg" alt="Next"></a></div></section></div>
@@ -106,10 +106,10 @@
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="6m27cl">
-		import { start } from "/python-ds/svelte/immutable/start-3a6ab04b.js";
+		<script type="module" data-sveltekit-hydrate="13wnf44">
+		import { start } from "/python-ds/svelte/immutable/start-e29d7654.js";
 		start({
-			target: document.querySelector('[data-sveltekit-hydrate="6m27cl"]').parentNode,
+			target: document.querySelector('[data-sveltekit-hydrate="13wnf44"]').parentNode,
 			paths: {"base":"/python-ds","assets":"/python-ds"},
 			session: {},
 			route: true,
