--- a/pyscript-lab/public/e/interop.html
+++ b/pyscript-lab/public/e/interop.html
@@ -32,14 +32,14 @@
     </script>
     <py-env> - bokeh </py-env>
     <meta http-equiv="content-security-policy" content="">
-	<link rel="stylesheet" href="/python-ds/svelte/immutable/assets/pages/__layout.svelte-984fadee.css">
-	<link rel="modulepreload" href="/python-ds/svelte/immutable/start-3a6ab04b.js">
+	<link rel="stylesheet" href="/python-ds/svelte/immutable/assets/pages/__layout.svelte-29145ecc.css">
+	<link rel="modulepreload" href="/python-ds/svelte/immutable/start-e29d7654.js">
 	<link rel="modulepreload" href="/python-ds/svelte/immutable/chunks/index-5eb3cc7f.js">
 	<link rel="modulepreload" href="/python-ds/svelte/immutable/chunks/index-5e479832.js">
 	<link rel="modulepreload" href="/python-ds/svelte/immutable/chunks/singletons-d1fb5791.js">
-	<link rel="modulepreload" href="/python-ds/svelte/immutable/pages/__layout.svelte-539ff4bd.js">
+	<link rel="modulepreload" href="/python-ds/svelte/immutable/pages/__layout.svelte-5553ecfa.js">
 	<link rel="modulepreload" href="/python-ds/svelte/immutable/chunks/utils-4fc137b3.js">
-	<link rel="modulepreload" href="/python-ds/svelte/immutable/pages/e/interop/index.svelte-2d79e399.js">
+	<link rel="modulepreload" href="/python-ds/svelte/immutable/pages/e/interop/index.svelte-ddadf843.js">
 	<link rel="modulepreload" href="/python-ds/svelte/immutable/chunks/experiment_card-befa17fa.js">
 	<link rel="modulepreload" href="/python-ds/svelte/immutable/chunks/RunPython-86cc62fa.js">
   </head>
@@ -101,7 +101,7 @@
       <div class="px-1 py-2 border-2 border-red rounded relative ml-16"><label class="absolute -my-[20px] -mx-2 bg-white px-2 text-red" for="txt_age">Age</label>
         <input id="txt_age" type="text" class="appearance-none border-2 border-white rounded w-full py-2 text-grey-darker leading-tight focus:outline-none focus:bg-white focus:border-white" placeholder="How old are you?" value=""></div></div>
     <button class="bg-green-400 flex-grow w-full py-2 px-3 mt-2" type="button">Run</button>
-    <p class="mt-4"><a class="text-sky-500" href="/python-ds/py/interop.py" target="_blank">View source</a></p></article>
+    <p class="mt-4"><a class="text-sky-500" href="https://github.com/guinetik/python-ds/blob/master/pyscript-lab/static/py/interop.py" target="_blank">View source</a></p></article>
           <div class="flex"><a href="/python-ds/e/repl" class="text-xs ml-0 py-2 px-3 bg-blue-400 hover:bg-slate-300 text-slate-900 hover:text-slate-800 rounded transition duration-300"><img class="inline h-4" src="/python-ds/images/arrow-left.svg" alt="Next">Previous
             </a>
             <a href="/python-ds/e/bokeh" class="text-xs ml-auto py-2 px-3 bg-yellow-400 hover:bg-slate-300 text-slate-900 hover:text-slate-800 rounded transition duration-300">Next<img class="inline h-4" src="/python-ds/images/arrow-next.svg" alt="Next"></a></div></section></div>
@@ -109,10 +109,10 @@
       <footer class="py-3 px-6 bg-slate-800 text-xs text-white font-mono"><div id="script_gutter"></div></footer></div></div></main></div>
 
 
-		<script type="module" data-sveltekit-hydrate="z5hoa5">
-		import { start } from "/python-ds/svelte/immutable/start-3a6ab04b.js";
+		<script type="module" data-sveltekit-hydrate="13vphq4">
+		import { start } from "/python-ds/svelte/immutable/start-e29d7654.js";
 		start({
-			target: document.querySelector('[data-sveltekit-hydrate="z5hoa5"]').parentNode,
+			target: document.querySelector('[data-sveltekit-hydrate="13vphq4"]').parentNode,
 			paths: {"base":"/python-ds","assets":"/python-ds"},
 			session: {},
 			route: true,
