--- a/pyscript-lab/public/e/bokeh.html
+++ b/pyscript-lab/public/e/bokeh.html
@@ -30,18 +30,31 @@
     <script type="text/javascript">
       Bokeh.set_log_level("info");
     </script>
-    <py-env> - bokeh </py-env>
+<!-- 
+    <py-config>
+runtimes:
+  - src: "https://cdn.jsdelivr.net/npm/pyodide@0.21.0-alpha.1/pyodide.js"
+    name: 0.21.0-alpha.1
+    lang: python
+    </py-config> 
+  -->
+    <py-env>
+- bokeh
+- pandas
+- numpy
+- networkx
+    </py-env>
     <meta http-equiv="content-security-policy" content=""><script type="text/javascript" data-svelte="svelte-35t31t">Bokeh.set_log_level("info");
   </script><py-env data-svelte="svelte-35t31t">- bokeh </py-env>
 	<link rel="stylesheet" href="/python-ds/svelte/immutable/assets/pages/__layout.svelte-29145ecc.css">
-	<link rel="modulepreload" href="/python-ds/svelte/immutable/start-e29d7654.js">
-	<link rel="modulepreload" href="/python-ds/svelte/immutable/chunks/index-5eb3cc7f.js">
-	<link rel="modulepreload" href="/python-ds/svelte/immutable/chunks/index-5e479832.js">
+	<link rel="modulepreload" href="/python-ds/svelte/immutable/start-c4411749.js">
+	<link rel="modulepreload" href="/python-ds/svelte/immutable/chunks/index-fbf23eb0.js">
+	<link rel="modulepreload" href="/python-ds/svelte/immutable/chunks/index-2f88ce63.js">
 	<link rel="modulepreload" href="/python-ds/svelte/immutable/chunks/singletons-d1fb5791.js">
-	<link rel="modulepreload" href="/python-ds/svelte/immutable/pages/__layout.svelte-5553ecfa.js">
+	<link rel="modulepreload" href="/python-ds/svelte/immutable/pages/__layout.svelte-c669b9c1.js">
 	<link rel="modulepreload" href="/python-ds/svelte/immutable/chunks/utils-4fc137b3.js">
-	<link rel="modulepreload" href="/python-ds/svelte/immutable/pages/e/bokeh/index.svelte-5fbac7ce.js">
-	<link rel="modulepreload" href="/python-ds/svelte/immutable/chunks/experiment_card-befa17fa.js">
+	<link rel="modulepreload" href="/python-ds/svelte/immutable/pages/e/bokeh/index.svelte-2b829321.js">
+	<link rel="modulepreload" href="/python-ds/svelte/immutable/chunks/experiment_card-90629e29.js">
 	<link rel="modulepreload" href="/python-ds/svelte/immutable/chunks/RunPython-86cc62fa.js">
   </head>
   <body class="flex flex-col h-screen">
@@ -54,6 +67,9 @@
 
         
         <div class="hidden md:flex items-center space-x-1">
+
+
+<div></div>
 
 
 <div></div>
@@ -89,6 +105,9 @@
 <div></div>
 
 
+<div></div>
+
+
 <div></div></ul>
 
     
@@ -106,10 +125,10 @@
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="13wnf44">
-		import { start } from "/python-ds/svelte/immutable/start-e29d7654.js";
+		<script type="module" data-sveltekit-hydrate="1arb62s">
+		import { start } from "/python-ds/svelte/immutable/start-c4411749.js";
 		start({
-			target: document.querySelector('[data-sveltekit-hydrate="13wnf44"]').parentNode,
+			target: document.querySelector('[data-sveltekit-hydrate="1arb62s"]').parentNode,
 			paths: {"base":"/python-ds","assets":"/python-ds"},
 			session: {},
 			route: true,
