--- a/pyscript-lab/public/e/media.html
+++ b/pyscript-lab/public/e/media.html
@@ -44,7 +44,8 @@ runtimes:
 - numpy
 - networkx
     </py-env>
-    <meta http-equiv="content-security-policy" content="">
+    <meta http-equiv="content-security-policy" content=""><script type="text/javascript" data-svelte="svelte-1wft6wx">Bokeh.set_log_level("info");
+    </script><py-env data-svelte="svelte-1wft6wx">- bokeh</py-env>
 	<link rel="stylesheet" href="/python-ds/svelte/immutable/assets/pages/__layout.svelte-29145ecc.css">
 	<link rel="modulepreload" href="/python-ds/svelte/immutable/start-c4411749.js">
 	<link rel="modulepreload" href="/python-ds/svelte/immutable/chunks/index-fbf23eb0.js">
@@ -52,7 +53,8 @@ runtimes:
 	<link rel="modulepreload" href="/python-ds/svelte/immutable/chunks/singletons-d1fb5791.js">
 	<link rel="modulepreload" href="/python-ds/svelte/immutable/pages/__layout.svelte-c669b9c1.js">
 	<link rel="modulepreload" href="/python-ds/svelte/immutable/chunks/utils-4fc137b3.js">
-	<link rel="modulepreload" href="/python-ds/svelte/immutable/pages/index.svelte-b238d910.js">
+	<link rel="modulepreload" href="/python-ds/svelte/immutable/pages/e/media/index.svelte-96fbce77.js">
+	<link rel="modulepreload" href="/python-ds/svelte/immutable/chunks/experiment_card-90629e29.js">
   </head>
   <body class="flex flex-col h-screen">
     <div class="w-full flex-grow">
@@ -109,28 +111,23 @@ runtimes:
 
     
     <button class="absolute top-0 right-0 bottom-0 left-0 opacity-0"><svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 absolute top-2 left-2" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg></button></nav></nav>
-  <main class="w-full"><div class="py-10 flex items-center justify-center"><div class="bg-white rounded-lg shadow-2xl overflow-hidden w-3/4 ">
-      <div class="md:flex"><img class="w-full md:w-2/3 object-cover object-center p-1 rounded-lg" src="/python-ds/images/pyscript.png" alt="PyScript">
-        <div class="p-8 space-y-3 border-slate-900 md:border-l sm:border-t"><h2 class="text-xl font-extrabold mb-5">Hi there</h2>
-          <p>These are some studies on PyScript and trying to find nice use cases
-            for the technology. 
-            <br>
-            Also, this repo tries to explore how convinient
-            it is to deal with python scripts inside an already defined project
-            strucutre as well as asking how well PyScript interacts with a JS
-            framework like Svelte.
-            <br>
-            Unfortunately the load times are very long so be patient.
-          </p>
-          <ul class="list-disc mx-4"><li><a href="https://pyscript.net/" class="text-blue-500 hover:text-blue-900">PyScript Website</a></li></ul></div></div>
+  <main class="w-full h-[calc(100%-120px)]"><div class="py-10 w-full flex items-center justify-center h-full"><div class="bg-white rounded-lg shadow-2xl overflow-hidden w-10/12 ">
+      <div class="md:flex"><section class="bg-slate-300 lg:w-3/4 md:flex-grow md:w-full min-h-[380px]"><div slot="py_slot" id="chart" class="flex items-center justify-center h-full"><img width="200" height="200" src="https://i.gifer.com/origin/a7/a742fbe8ed45f6455cc767ab4c41997e_w200.gif" alt="Under Construction"></div></section>
+        <section class="p-4 space-y-3 md:w-1/2 lg:w-4/12 border-t border-slate-900 md:border-l"><article slot="content_slot"><h2 class="text-xl font-extrabold mb-5">Webcam + OpenCV</h2>
+      <p>OpenCV is not yet available in the release version of PyScript.</p>
+      <p class="mt-6"><a class="text-sky-500" href="/python-ds/py/bokeh_index.py" target="_blank">View source</a></p></article>
+          <div class="flex"><a href="/python-ds/e/bokeh/2" class="text-xs ml-0 py-2 px-3 bg-blue-400 hover:bg-slate-300 text-slate-900 hover:text-slate-800 rounded transition duration-300"><img class="inline h-4" src="/python-ds/images/arrow-left.svg" alt="Next">Previous
+            </a>
+            <a href="/python-ds/e/bokeh/2" class="text-xs ml-auto py-2 px-3 bg-yellow-400 hover:bg-slate-300 text-slate-900 hover:text-slate-800 rounded transition duration-300">Next<img class="inline h-4" src="/python-ds/images/arrow-next.svg" alt="Next"></a></div></section></div>
       
-      <footer class="py-3 px-6 bg-slate-800 text-xs text-white"><div id=""></div></footer></div></div></main></div>
+      <footer class="py-3 px-6 bg-slate-800 text-xs text-white font-mono"><div id="script_gutter"></div></footer></div></div></main>
+  </div>
 
 
-		<script type="module" data-sveltekit-hydrate="161mtcc">
+		<script type="module" data-sveltekit-hydrate="1b0iywm">
 		import { start } from "/python-ds/svelte/immutable/start-c4411749.js";
 		start({
-			target: document.querySelector('[data-sveltekit-hydrate="161mtcc"]').parentNode,
+			target: document.querySelector('[data-sveltekit-hydrate="1b0iywm"]').parentNode,
 			paths: {"base":"/python-ds","assets":"/python-ds"},
 			session: {},
 			route: true,
@@ -139,9 +136,9 @@ runtimes:
 			hydrate: {
 				status: 200,
 				error: null,
-				nodes: [0, 8],
+				nodes: [0, 6],
 				params: {},
-				routeId: ""
+				routeId: "e/media"
 			}
 		});
 	</script></div>
